--- a/Views/Shared/_MyLayout.cshtml
+++ b/Views/Shared/_MyLayout.cshtml
@@ -17,10 +17,10 @@
     <!-- style css -->
     <link rel="stylesheet" href="~/Content/css/hoitro-style-config.css" />
     <link rel="stylesheet" href="~/Content/css/hoitro-style.css">
-    <link rel="stylesheet" href="~/Content/css/style_manaAcc.css">
+    <!--<link rel="stylesheet" href="~/Content/css/style_manaAcc.css">-->
     @*<link rel="stylesheet" href="~/Content/css/style_room.css">*@
     @*<link rel="stylesheet" href="~/Content/css/style_dangtin.css">*@
-    <link rel="stylesheet" href="~/Content/css/style_signinsignout.css" />
+    <!--<link rel="stylesheet" href="~/Content/css/style_signinsignout.css" />-->
     <!-- Responsive-->
     <link rel="stylesheet" href="~/Content/css/responsive.css" />
     <!-- fevicon -->
