--- a/Areas/Admin/Views/Banners/Index.cshtml
+++ b/Areas/Admin/Views/Banners/Index.cshtml
@@ -18,7 +18,7 @@
     <div class="col-lg-12">
         <div class="panel panel-default">
             <div class="panel-heading">
-                Quản lý Tin tức
+                Quản lý Banner
             </div>
             <div class="panel-body">
                 <div class="bs-example" style="text-align:right; padding-bottom:10px;">
@@ -57,22 +57,22 @@
                                        id="dataTables-example">
                                     <tr>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.name)
+                                            @Html.DisplayName("Tên")
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.img)
+                                            @Html.DisplayName("Ảnh")
                                         </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.meta)
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.hide)
+                                            @Html.DisplayName("Hiển thị")
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.order)
+                                            @Html.DisplayName("Sắp xếp")
                                         </th>
                                         <th>
-                                            @Html.DisplayNameFor(model => model.datebegin)
+                                            @Html.DisplayName("Ngày tạo")
                                         </th>
                                         <th></th>
                                     </tr>
