--- a/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/Areas/Admin/Views/Accounts/Index.cshtml
@@ -57,22 +57,22 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.name)
+                                        @Html.DisplayName("Tên người dùng")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.phoneNum)
+                                        @Html.DisplayName("Số điện thọai")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.email)
+                                        @Html.DisplayName("Thư điện tử")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.zaloNum)
+                                        @Html.DisplayName("Số zalo")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.FBlink)
+                                        @Html.DisplayName("Liên kết FaceBook")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.avtImage)
+                                        @Html.DisplayName("Ảnh đại diện")
                                     </th>
                                     @*<th>
                                     @Html.DisplayNameFor(model => model.password)
@@ -81,13 +81,13 @@
                                         @Html.DisplayNameFor(model => model.meta)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.hide)
+                                        @Html.DisplayName("Hiển thị")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.order)
+                                        @Html.DisplayName("Sắp xếp")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.datebegin)
+                                        @Html.DisplayName("Ngày tạo tài khoản")
                                     </th>
                                     <th></th>
                                 </tr>
