--- a/Areas/Admin/Views/Mentors/Create.cshtml
+++ b/Areas/Admin/Views/Mentors/Create.cshtml
@@ -26,9 +26,12 @@
 
         <div class="form-group">
             @Html.Label("Hình đại diện", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                <input type="file" name="img" id="img" accept=".jpg, .png, .gif, .jpeg, .bmp" />
+            <div class="col-md-6">
+                <input type="file" name="img" id="img" accept=".jpg, .png, .gif, .jpeg, .bmp" onchange="previewImage(event)" />
                 @Html.ValidationMessageFor(model => model.avtImage, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-4">
+                <img id="preview" src="" width="100px" />
             </div>
         </div>
 
@@ -123,6 +126,16 @@
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
+<script>
+    function previewImage(event) {
+        var reader = new FileReader();
+        reader.onload = function () {
+            var output = document.getElementById('preview');
+            output.src = reader.result;
+        };
+        reader.readAsDataURL(event.target.files[0]);
+    }
+</script>
 }
 @section _Footer
 {
