--- a/Areas/Admin/Views/News/Index.cshtml
+++ b/Areas/Admin/Views/News/Index.cshtml
@@ -57,34 +57,34 @@
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
                                 <tr>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.title)
+                                        @Html.DisplayName("Tiêu đề")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.author)
+                                        @Html.DisplayName("Tác giả")
                                     </th>
                                     <th>
                                         @Html.DisplayNameFor(model => model.meta)
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.hide)
+                                        @Html.DisplayName("Hiển thị")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.order)
+                                        @Html.DisplayName("Sắp xếp")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.datebegin)
+                                        @Html.DisplayName("Ngày đăng")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.brief_description)
+                                        @Html.DisplayName("Mô tả")
                                     </th>
                                     @*<th>
                                     @Html.DisplayNameFor(model => model.detail_description)
                                 </th>*@
                                     <th>
-                                        @Html.DisplayNameFor(model => model.imagePath)
+                                        @Html.DisplayName("Ảnh đại diện")
                                     </th>
                                     <th>
-                                        @Html.DisplayNameFor(model => model.NewsType.title)
+                                        @Html.DisplayName("Loại tin tức")
                                     </th>
                                     <th></th>
                                 </tr>
